--- a/view/user/BerandaUser.ejs
+++ b/view/user/BerandaUser.ejs
@@ -7,13 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gradient-to-tr from-cyan-400 via-blue-500 to-purple-600 min-h-screen">
-
-    <header class="sticky top-0 z-50 bg-white/25 backdrop-blur-lg border-b border-white/30 shadow-md">
+<body class="bg-[radial-gradient(ellipse_at_center,_var(--tw-gradient-stops))] from-[#1D1C52] to-[#1B4599] min-h-screen">
+    
+    <header class="sticky top-0 z-50 bg-[#FF9428] backdrop-blur-lg border-b border-white/30 shadow-md">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center text-white">
 
             <div class="flex items-center gap-6">
-                <a href="#" class="text-2xl font-bold">WORKSHOP<span class="text-cyan-300">.com</span></a>
+                <a href="#" class="text-2xl font-bold">AREM AREM BUNGKUS ILMU<span class="text-[#ffff]-300">.com</span></a>
                 <div class="hidden md:block relative">
                     <input type="text" placeholder="workshop yang relata sama kamu?" class="bg-white/20 placeholder-gray-200 text-sm rounded-lg py-2 pl-4 pr-10 w-80 focus:outline-none">
                     <button class="absolute inset-y-0 right-0 px-3 text-white">
